# moonfire

./: .gitignore  Dockerfile  NOTES.md  README.md  justfile  poetry.toml  prompt.md  pyproject.toml
app/: main.py
app/static/css/: app.css
app/tailwindcss/: package-lock.json  package.json  tailwind.config.js
app/templates/: base.html
terraform/app/: .terraform.lock.hcl  main.tf  provider.tf  vars.tf
terraform/ecr/: main.tf
