[tool.poetry]
name = "moonfire"
version = "0.1.0"
description = ""
authors = ["Alfred Gamulo <alfred.gamulo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
Jinja2 = "^3.1.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
tomli = "^2.0.1"
Flake8-pyproject = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.flake8]
ignore = """
    E501,
    F821,
"""
